# warden

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  test.md  vite.config.ts
.changeset/: README.md  accordion-diff-tab.md  agent-asks-user-mid-run.md  agent-issue-tools-and-issues-merge.md  agent-session-provider-icon.md  agent-workflows.md  ask-user-question-fix.md  branch-hint-no-guessed-prefix.md  branch-prefill-from-issue.md  browser-global-viewport.md  chat-transcript-overhaul.md  claude-oneshot-stdin-prompt.md  codex-install-fix.md  codex-per-turn-sandbox.md  codex-turn-error-settles-run.md  collapsed-sidebar-overhaul.md  composer-selectors-redesign.md  context-injection.md  context-meter.md  cursor-grok-backends.md  drag-drop-attachments.md  dynamic-model-catalog.md  fix-claude-cancel.md  fix-production-build.md  git-pull-push.md  global-command-palette.md  header-rework.md  inline-rename-polish.md  inset-shell-tabs.md  linux-distribution.md  managed-default-cli-source.md  mode-tooltip-compact-format.md  namespaced-repo-config.md  new-session-brand-icons.md  one-click-create-pr.md  plan-mode-approval.md  pr-hover-card.md  pr-poll-no-activity-bump.md  proud-lions-search.md  remove-review-pr.md  (+32 more)
.claude/: launch.json
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  (+1 more)
.warden/: config.json
.zed/: settings.json
crates/warden-core/: Cargo.toml  build.rs
crates/warden-core/src/: backend.rs  error.rs  lib.rs  model_config.rs  paths.rs  poll.rs  secret.rs  util.rs
crates/warden-core/src/agent/: attachments.rs  backend.rs  manager.rs  mod.rs  model.rs  naming.rs  oneshot.rs  registry.rs  session_proc.rs  settle.rs  stream.rs  transcript.rs  turn.rs
crates/warden-core/src/cli/: install.rs  mod.rs  paths.rs
crates/warden-core/src/event/: emit.rs  mod.rs  payloads.rs  state.rs  text.rs  types.rs
crates/warden-core/src/git/: cli.rs  diff.rs  merge.rs  mod.rs  remote.rs  setup.rs  worktree.rs
crates/warden-core/src/integrations/: mod.rs
crates/warden-core/src/integrations/github/: issues.rs  mod.rs  pr.rs  pr_content.rs
crates/warden-core/src/integrations/linear/: binding.rs  client.rs  key.rs  mod.rs  writeback.rs
crates/warden-core/src/mcp/: mod.rs  tools.rs
crates/warden-core/src/mentions/: commands_index.rs  files.rs  mod.rs  repo_refs.rs
crates/warden-core/src/net/: archive.rs  graphql.rs  http.rs  mod.rs  version.rs
crates/warden-core/src/platform/: install.rs  mod.rs  process.rs
crates/warden-core/src/provider/: context.rs  jsonrpc.rs  mod.rs
crates/warden-core/src/provider/claude/: agent.rs  auth.rs  history.rs  mod.rs
crates/warden-core/src/provider/codex/: agent.rs  auth.rs  history.rs  mod.rs
crates/warden-core/src/provider/cursor/: agent.rs  auth.rs  mod.rs  models.rs
crates/warden-core/src/provider/grok/: acp.rs  agent.rs  auth.rs  mod.rs  models.rs
crates/warden-core/src/provider/opencode/: agent.rs  auth.rs  history.rs  mod.rs  models.rs  server.rs
crates/warden-core/src/session/: mod.rs  types.rs
crates/warden-core/src/store/: events.rs  groups.rs  labels.rs  linear.rs  mappers.rs  migrations.rs  mod.rs  procs.rs  projects.rs  sessions.rs  settings.rs  sql.rs  workflows.rs
crates/warden-core/src/terminal/: mod.rs  pty.rs  recipe.rs  registry.rs
crates/warden-core/src/workflow/: events.rs  executor.rs  mod.rs  recipes.rs  service.rs  types.rs
crates/warden-core/src/workspace/: config.rs  mod.rs  types.rs
docs/: BUILD-PERFORMANCE.md  BUNDLE-OPTIMIZATION.md  LINEAR-INTEGRATION.md  LINUX-BUILD.md  MACOS-BUILD.md  MODEL-CATALOG.md  MONOREPO-MIGRATION.md  OVERVIEW.md  TESTING.md
plans/: 001-cargo-test-in-ci.md  002-stream-parser-characterization-tests.md  003-correct-toolchain-docs.md  004-fix-mention-highlight-reset.md  README.md
scripts/: appimage-apprun.sh  build-appimage.sh  changeset-publish.mjs  sync-version.mjs
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  events.rs  git.rs  lib.rs  main.rs  provision.rs  recipes.rs  state.rs  util.rs
src-tauri/src/agent/: attachments.rs  claude.rs  codex.rs  codex_history.rs  commands.rs  mod.rs  naming.rs  oneshot.rs  recipes.rs  session_proc.rs  stream.rs
src-tauri/src/cli/: archive.rs  download.rs  install.rs  mod.rs  paths.rs  source.rs
src-tauri/src/commands/: external.rs  git.rs  github.rs  group.rs  mentions.rs  mod.rs  project.rs  provider.rs  providers.rs  recipe.rs  session.rs  terminal.rs  workspace.rs
src-tauri/src/core/: error.rs  events.rs  external.rs  mod.rs  model_config.rs  platform.rs  poll_tier.rs  state.rs  util.rs
src-tauri/src/domain/: context.rs  event.rs  group.rs  label.rs  mod.rs  project.rs  session.rs  workflow.rs  workspace.rs
src-tauri/src/git/: cli.rs  commands.rs  diff.rs  mod.rs  setup.rs  worktree.rs
src-tauri/src/github/: commands.rs  download.rs  mod.rs  poll.rs  pr.rs  pr_content.rs  token.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/integrations/github/: commands.rs  issues.rs  mod.rs  poll.rs  pr.rs  pr_content.rs
src-tauri/src/integrations/linear/: binding.rs  client.rs  commands.rs  key.rs  mod.rs  poll.rs  sync.rs  writeback.rs
src-tauri/src/mcp/: commands.rs  mod.rs
src-tauri/src/mentions/: commands.rs  mod.rs
src-tauri/src/providers/: commands.rs  context.rs  detect.rs  install.rs  jsonrpc.rs  manage.rs  mod.rs
src-tauri/src/providers/claude/: agent.rs  download.rs  history.rs  mod.rs
src-tauri/src/providers/codex/: agent.rs  auth.rs  download.rs  history.rs  mod.rs
src-tauri/src/providers/opencode/: agent.rs  auth.rs  download.rs  history.rs  mod.rs  models.rs
src-tauri/src/session/: commands.rs  mod.rs
src-tauri/src/store/: migrations.rs  mod.rs
src-tauri/src/terminal/: commands.rs  mod.rs  pty.rs  registry.rs
src-tauri/src/workflow/: commands.rs  events.rs  executor.rs  mod.rs
src-tauri/src/workspace/: commands.rs  config.rs  group.rs  mod.rs  project.rs
(+370 files in other folders)
