[package]
name = "warden"
version = "0.3.0"
description = "A browser for your AI agent sessions"
authors = ["Warden"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.80"

[lib]
name = "warden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"

tokio = { version = "1", features = [
    "process",
    "io-util",
    "macros",
    "sync",
    "rt-multi-thread",
    "time",
] }

rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Native PTY for interactive terminal sessions (runs the real `claude` TUI).
portable-pty = "0.8"
# Resolves the `claude` CLI on PATH across platforms, including Windows `.cmd`
# shims that std::process does not find on its own.
which = "7"
# Gitignore-aware filesystem walking for @-mention file listing (used by ripgrep).
ignore = "0.4"
# Downloading + verifying + extracting managed provider CLI binaries. rustls
# avoids a system OpenSSL dependency on Linux.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
