[package]
name = "warden-core"
version = "0.1.11"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[lib]
name = "warden_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = [
    "process",
    "io-util",
    "macros",
    "sync",
    "rt-multi-thread",
    "time",
    "fs",
] }
# Pinned to match the shell exactly so the `Type` derives unify into one specta
# and tauri-specta accepts core types in the bindings builder.
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
# Derives the enum<->string conversions (one declarative source, replacing the
# hand-rolled as_str/parse match arms).
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
log = "0.4"
# Native PTY for interactive terminal sessions (runs the real `claude` TUI).
portable-pty = "0.8"
# Gitignore-aware filesystem walking for @-mention file listing.
ignore = "0.4"
# `AppError::Db` wraps rusqlite::Error; bundled SQLite avoids a system dep. The
# store layer ports onto this next.
rusqlite = { version = "0.32", features = ["bundled"] }

# Managed-binary distribution toolkit (net + dist) and keychain (secret).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"
which = "7"
async-trait = "0.1"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

# Tauri is optional: the core compiles without it (a standing decoupling test and
# a future CLI/server surface). The shell enables `features = ["tauri"]`.
tauri = { version = "2.11.2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
tauri = ["dep:tauri"]
# Enables the destructive schema-fingerprint rebuild in `store::migrations`
# (dev-only; in its absence, drift on a populated DB refuses loudly).
dev-migrations = []
